Fix env variables for real

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
   memory: 256M
   instances: 1
   domain: mybluemix.net
-  name: fatecpizzabot
+  name: pizzabot-fatec
   disk_quota: 1024M
